--- a/package.json
+++ b/package.json
@@ -3,14 +3,21 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "tsc": "tsc",
+    "dev": "ts-node-dev --respawn --transpileOnly ./app/app.ts",
+    "prod": "tsc && node ./build/app.js"
   },
   "dependencies": {
+    "@types/express": "^4.17.6",
+    "@types/mongodb": "^3.5.25",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11"
+    "mongodb": "^3.5.9",
+    "morgan": "^1.9.1",
+    "pug": "2.0.0-beta11",
+    "ts-node-dev": "^1.0.0-pre.50",
+    "typescript": "^3.9.6"
   }
 }
