--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "dependencies": {
     "@types/express": "^4.17.6",
     "@types/mongodb": "^3.5.25",
-    "cookie-parser": "~1.4.4",
     "clean-css": ">=4.1.11",
+    "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
