--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@types/express": "^4.17.6",
     "@types/mongodb": "^3.5.25",
+    "@types/mongoose": "^5.7.31",
     "clean-css": ">=4.1.11",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -17,6 +18,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "mongodb": "^3.5.9",
+    "mongoose": "^5.9.23",
     "morgan": "^1.9.1",
     "pug": "2.0.0-beta11",
     "ts-node-dev": "^1.0.0-pre.50",
