--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/express": "^4.17.6",
     "@types/mongodb": "^3.5.25",
     "@types/mongoose": "^5.7.31",
+    "@types/uuid": "^8.0.0",
     "clean-css": ">=4.1.11",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -22,6 +23,7 @@
     "morgan": "^1.9.1",
     "pug": "2.0.0-beta11",
     "ts-node-dev": "^1.0.0-pre.50",
-    "typescript": "^3.9.6"
+    "typescript": "^3.9.6",
+    "uuid": "^8.2.0"
   }
 }
